--- a/be/hyper-express/package.json
+++ b/be/hyper-express/package.json
@@ -30,6 +30,7 @@
     "@tsconfig/node14": "^1.0.3",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^28.0.7",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.10.1",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.10",
