--- a/be/elysia/package.json
+++ b/be/elysia/package.json
@@ -10,6 +10,7 @@
     "@elysiajs/cors": "^0.7.2",
     "@elysiajs/jwt": "^0.7.0",
     "@elysiajs/swagger": "^0.7.4",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "elysia": "latest",
     "lodash": "^4.17.21",
