--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "serve": "^14.0.1",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
